# devin-orchestrator

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  devin_client.py  github_client.py  main.py  models.py  poller.py  storage.py  webhook.py
frontend/: nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: ActivityFeed.tsx  CostChart.tsx  MetricsPanel.tsx  SessionList.tsx
frontend/src/lib/: api.ts
